dark mode updates, svg fixes, copy edits

--- a/src/styles/pages/about.less
+++ b/src/styles/pages/about.less
@@ -192,7 +192,7 @@
   &__panel {
     width: 25%;
     transition: color .4s ease;
-    color: @sunrise-text;
+    color: @icon-gray;
     .dark-mode & {
       color: @sunset-text;
     }
@@ -235,7 +235,7 @@
   &__social {
     .flex(@align: center);
     > a {
-      height: 24px;
+      height: 27px;
       margin-right: 12px;
       @media screen and (max-width: 850px) {
         margin-right: 20px;
